<resources>
    <string name="app_name">AbentSeller</string>
    <string name="map_key">AIzaSyC5PfZOTOsUj6SxaYS8nkd3GhZfue0KKcM</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to">Sign in to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="sign_up_to">Sign Up to create a new account.</string>
    <string name="already_have">Already have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email to recover your password</string>
    <string name="send">Send</string>
    <string name="verification">Verification</string>
    <string name="enter_the_code">Enter the OTP code sent to your email</string>
    <string name="did_not_receive_a_code">Did not receive a code?</string>
    <string name="r_e_s_e_n_d">R E S E N D</string>
    <string name="done">Done</string>
    <string name="change_email">Change Email</string>
    <string name="_0000">0000</string>
    <string name="add_more">Add more details</string>
    <string name="select">Date of birth</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="finish">Finish</string>
    <string name="allow_location">Allow \"Abent\" to use your location</string>
    <string name="this_app_requires">"This app requires access to your location to match with the nearest Grocery Store! "</string>
    <string name="allow">Allow</string>
    <string name="allow_while">Allow while using app</string>
    <string name="don_t_allow">Don\'t  Allow</string>
    <string name="gender">Gender</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
    <string name="search_location_here">Search location here…</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="earnings">Earnings</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active">Active</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="product_name">Product Name</string>
    <string name="_02_28_22">02/28/22</string>
    <string name="_30">$30</string>
    <string name="parcel_code">Parcel Code:</string>
    <string name="_242353">242353</string>
    <string name="size">Size:</string>
    <string name="m">M</string>
    <string name="name">Name</string>
    <string name="example_mail_com">Example@gmail.com</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="_3_items">3 items</string>
    <string name="_20_jun_10_30">20 Jun, 10:30</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="details">Details</string>
    <string name="men_s_formal">Men’s Formal Dressing</string>
    <string name="by_storename">By@storename</string>
    <string name="description">Description</string>
    <string name="the_nike">The Nike Air Max 270 React ENG combines a full-length React foam midsole with a 270 Max Air unit for unrivaled comfort and a striking visual experience.</string>
    <string name="order_details">Order Details</string>
    <string name="in_progress">In Progress</string>
    <string name="product_items">Product Items</string>
    <string name="order_date">Order Date</string>
    <string name="feb_15_2022">Feb 15, 2022</string>
    <string name="product_size">Product Size</string>
    <string name="product_color">Product Color</string>
    <string name="price_details">Price Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="usd">USD</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="delivery_rider">Delivery Rider</string>
    <string name="your_rider">Your Rider</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="buyer_name">Buyer Name:</string>
    <string name="items">Items:</string>
    <string name="search_">Search…</string>
    <string name="recent">Recent</string>
    <string name="write_your_message_here">Write your message here....</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="file">File</string>
    <string name="select_category">Select category which product you want to add</string>
    <string name="add_new_product">Add new product</string>
    <string name="add_images">Add Images</string>
    <string name="_1_10">(1–10)</string>
    <string name="add_video">Add Video</string>
    <string name="optional_">(Optional)</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="available_size">Available Sizes</string>
    <string name="available_colors">Available Colors</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="gray">Gray</string>
    <string name="publish">Publish</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="published">Published!</string>
    <string name="masaryk">Masaryk</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="edit">Edit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="notifications">Notifications</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="order_notification">Order Notification</string>
    <string name="review_notification">Review Notification</string>
    <string name="delivery_notification">Delivery Notification</string>
    <string name="chat_notification">Chat Notification</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="terms">Help protect your website and its users with clear and fair website terms and conditions. These terms and conditions for a website set out key issues such as acceptable use, privacy, cookies, registration and passwords, intellectual property, links to other sites, termination and disclaimers of responsibility. Terms and conditions are used and necessary to protect a website owner from liability of a user relying on the information or the goods provided from the site then suffering a loss.Help protect your website and its users with clear and fair website terms and conditions. These terms and conditions for a website set out key issues such as acceptable use, privacy, cookies, registration and passwords, intellectual property, links to other sites, termination and disclaimers of responsibility. Terms and conditions are used and necessary to protect a website owner from liability of a user relying on the information or the goods provided from the site then suffering a loss.Help protect your website and its users with clear and fair website terms and conditions. These terms and conditions for a website set out key issues such as acceptable use, privacy, cookies, registration and passwords, intellectual property, links to other sites, termination and disclaimers of responsibility. Terms and conditions are used and necessary to protect a website owner from liability of a user relying on the information or the goods provided from the site then suffering a loss.Help protect your website and its users with clear and fair website terms and conditions. These terms and conditions for a website set out key issues such as acceptable use, privacy, cookies, registration and passwords, intellectual property, links to other sites, termination and disclaimers of responsibility. Terms and conditions are used and necessary to protect a website owner from liability of a user relying on the information or the goods provided from the site then suffering a loss.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="help_protect">Help protect your website and its users with clear and fair website terms and conditions.</string>
    <string name="version">Version</string>
    <string name="_2_1_0">2.1.0</string>
    <string name="powered_by">Powered by</string>
    <string name="contact_us">Contact Us</string>
    <string name="www_abent_com">www.abent.com</string>
    <string name="contact_abent_com">abent@gmail.com</string>
    <string name="are_you_sure">Are you sure you want to logout?</string>
    <string name="logout_now">Logout Now</string>
    <string name="qr_code_scan">QR Code Scan</string>
    <string name="results">Results</string>
    <string name="person_name">Person Name</string>
    <string name="phone">Phone</string>
    <string name="required">Required</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="both_password">Both Passwords are not same</string>
    <string name="loading">Loading</string>
    <string name="this_email">Email already exists. Please try with another email.</string>
    <string name="not_enter">Not entered</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="password_max">Password Max Length Reached</string>
    <string name="match">Match</string>
    <string name="not_match">Not match</string>
    <string name="open_email">Open Email</string>
    <string name="matched">Matched</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_select_dtb">Please select date of birth</string>
    <string name="others">Others</string>
    <string name="limit_reached">Limit Reached</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="all">All</string>
    <string name="old_password_is">Old Password is not Correct</string>
    <string name="password_change">Password changed successfully</string>
    <string name="select_size">Select Size</string>
    <string name="s">S</string>
    <string name="x">X</string>
    <string name="xl">XL</string>
</resources>