<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbarThumbVertical="@null"
    tools:context=".Activities.StartUp.AllowLocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_current_location" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/allow_location"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/this_app_requires"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_allow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="60dp"
            android:background="@drawable/btn_sign_in_bg"
            android:fontFamily="@font/poppins"
            android:text="@string/allow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_allow_while"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg_stroke"
            android:fontFamily="@font/poppins"
            android:text="@string/allow_while"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_do_not_allow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg_stroke"
            android:fontFamily="@font/poppins"
            android:text="@string/don_t_allow"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>