<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.StartUp.EmailVerificationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/email_verification"
                android:contentDescription="@string/app_name" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins"
                android:text="@string/verification"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/enter_the_code"
                android:textColor="@color/black" />

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:cursorVisible="true"
                android:hint="@string/_0000"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/black"
                app:cursorWidth="2dp"
                app:itemCount="4"
                app:itemHeight="50dp"
                app:itemRadius="10dp"
                app:itemSpacing="10dp"
                app:itemWidth="50dp"
                app:lineColor="@color/gray_alpha_50"
                app:lineWidth="1.5dp"
                app:viewType="rectangle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/did_not_receive_a_code"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/pinView" />


            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/circular_ripple"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/r_e_s_e_n_d"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_sign_in_bg"
                android:fontFamily="@font/poppins"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/circular_ripple"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/change_email"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>